Record why .todo/482 does not need an x64 re-run
The spike ran on aarch64 only, so the obvious question is whether x64
changes it. Separate the two halves: an x64 run could genuinely move the
decode cost in the mixed-precision shape (vcvtph2ps has been there since
2013, though openjdk/jdk#22755 vectorizes Float16 arithmetic and not the
conversions, so it is a question and not a known win), and that is worth
measuring where item 487 implements the bulk widen.

It cannot move the decision. The one kernel AVX512-FP16 would make fast is
the Float16-accumulator one, and .kb/vec.md's lane-count pin already rules
that shape out -- FSPECIES_REDUCE is SPECIES_128 and not SPECIES_PREFERRED
precisely so a compiled class must not answer differently on an AVX-512
host, and an f16 accumulator changes the accumulator's precision rather
than merely its lane count. So storage-not-compute is host-independent by
construction and no child item's scope depends on an x64 number.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>